<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>club.xiaojiawei</groupId>
    <artifactId>hs-script</artifactId>
    <version>v3.2.6.2-DEV</version>
    <name>Hearthstone-Script</name>
    <description>炉石传说脚本</description>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <properties>
        <java.version>21</java.version>
        <javafx-version>21.0.1</javafx-version>
        <javafx-ui-version>v1.2.0</javafx-ui-version>
        <mapstruct-version>1.6.0.Beta1</mapstruct-version>
        <jintellitype-version>1.4.1</jintellitype-version>
        <fastjson-version>2.0.20</fastjson-version>
        <jna-version>5.14.0</jna-version>
        <lombok-version>1.18.30</lombok-version>
        <maven-assembly-plugin-version>3.6.0</maven-assembly-plugin-version>
        <maven-jar-plugin-version>3.3.0</maven-jar-plugin-version>
        <maven-compiler-plugin-version>3.12.1</maven-compiler-plugin-version>
    </properties>

    <dependencies>
        <!--javafx-->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx-version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx-version}</version>
        </dependency>
        <!--JavaFX组件UI库-->
        <dependency>
            <groupId>com.github.xjw580</groupId>
            <artifactId>javafx-ui</artifactId>
            <version>${javafx-ui-version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>club.xiaojiawei</groupId>-->
<!--            <artifactId>javafx-ui</artifactId>-->
<!--            <version>1.2.0</version>-->
<!--        </dependency>-->
        <!--bean转换包-->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct-version}</version>
        </dependency>
        <!-- 监听全局键鼠包 -->
        <dependency>
            <groupId>com.melloware</groupId>
            <artifactId>jintellitype</artifactId>
            <version>${jintellitype-version}</version>
        </dependency>
        <!-- fastjson2 -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson-version}</version>
        </dependency>
        <!--访问系统本地库依赖-->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>${jna-version}</version>
        </dependency>
        <!--访问系统本地库依赖-->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>${jna-version}</version>
        </dependency>
        <!--lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok-version}</version>
            <scope>provided</scope>
        </dependency>
        <!--thymeleaf-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <!--WebSocket-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
        <!--Web-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}_${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly-plugin-version}</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptors>
                        <!-- 读取assembly.xml文件 -->
                        <descriptor>assembly.xml</descriptor>
                    </descriptors>
                    <!-- 输出在target/目录下 -->
                    <outputDirectory>${project.build.directory}/</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 打包成jar包，并指定lib和resources文件夹位置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin-version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/bat/**</exclude>
                        <exclude>**/exe/**</exclude>
                        <exclude>application.yml</exclude>
                    </excludes>
                    <archive>
                        <manifest>
                            <!-- 入口Main Class -->
                            <mainClass>club.xiaojiawei.ScriptApplication</mainClass>
                            <!-- 依赖的lib -->
                            <classpathPrefix>lib/</classpathPrefix>
                            <addClasspath>true</addClasspath>
                        </manifest>
                        <manifestEntries>
                            <Class-Path>resources/</Class-Path>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin-version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok-version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct-version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
